# INE5670-2024.01

./: README.md  docker-compose.yml  main.py  pyproject.toml
backend/: main.py  pyproject.toml
esp/: esp.ino
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.tsx  output.css
